--- a/front-end/src/assets/base.css
+++ b/front-end/src/assets/base.css
@@ -1,5 +1,5 @@
 /* color palette from <https://github.com/vuejs/theme> */
-@import './animation.scss';
+/* @import './animation.scss'; */
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
